compiler/testData/multiplatform/classScopes/missingConstructor/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/classScopes/missingConstructor/jvm.kt:1:12: error: 'impl' class 'Foo' has no corresponding 'header' declaration
The following declaration is incompatible because some members are not implemented:
    public final header class Foo
No implementations are found for members listed below:

    public constructor Foo(s: String)

    The following declaration is incompatible because number of value parameters is different:
        public constructor Foo()

impl class Foo
           ^
